force-app/main/default/objects/Opportunity/fields/Bailey_s_Thoughts__c.field-meta.xml
<CustomField>
    <fullName>Bailey_s_Thoughts__c</fullName>
    <label>Bailey&apos;s Thoughts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>