force-app/main/default/objects/Opportunity/fields/Deal_Category__c.field-meta.xml
<CustomField>
    <fullName>Deal_Category__c</fullName>
    <inlineHelpText>Select the category that best describes this deal&apos;s funding stage.</inlineHelpText>
    <label>Deal Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Seed</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Follow-On</fullName>
            </value>
            <value>
                <fullName>Syndicated</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>