force-app/main/default/objects/Opportunity/fields/Support_Status__c.field-meta.xml
<CustomField>
    <fullName>Support_Status__c</fullName>
    <description>Current indicator of the Support Status</description>
    <inlineHelpText>Current indicator of the Support Status</inlineHelpText>
    <label>Support Status</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>