force-app/main/default/objects/Opportunity/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <label>Support Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>